--- a/app/src/main/res/layout/fragment_load_web.xml
+++ b/app/src/main/res/layout/fragment_load_web.xml
@@ -1,14 +1,35 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
+    android:padding = "20dp"
     tools:context=".Fragments.LoadWebFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <EditText
+        android:id="@+id/etUrl"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:layout_height="wrap_content"
+        android:hint="@string/url"
+        android:textSize="18sp"/>
 
-</FrameLayout>
+    <Button
+        android:id="@+id/btnFirstWeb"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="5dp"
+        android:text="@string/loadFirst"
+        android:background="@color/colorAccent"
+        android:textColor="@color/white"/>
+
+    <Button
+        android:id="@+id/btnSecondWeb"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="5dp"
+        android:text="@string/loadSecond"
+        android:background="@color/colorAccent"
+        android:textColor="@color/white"/>
+</LinearLayout>
